@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add AsyncSubtest retrieveal to hubs
+
 0.000108  2018-03-11 12:51:56-07:00 America/Los_Angeles
 
     - No changes since last release
